Updates from review